--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/jest": "^29.5.3",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.7.0",
     "path": "^0.12.7",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
