--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -24,6 +24,10 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    environment:
+      name: github-pages
+      url: ${{steps.deployment.outputs.page_url}}
+
     steps:
     - uses: actions/checkout@v4
     - name: Use Node.js 20
