--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -37,6 +37,7 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm test
+    - run: npm run lint
     - run: npm run build --if-present
     - name: Setup Pages
       uses: actions/configure-pages@v5
