--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --verbose",
+    "test-watch": "jest --verbose --watch",
     "build": "webpack",
-    "build-watch": "webpack --watch"
+    "build-watch": "webpack --watch",
+    "lint": "eslint",
+    "lint-fix": "eslint --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.13.0",
     "@types/jest": "^29.5.3",
+    "eslint": "^9.13.0",
+    "globals": "^15.11.0",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.7.0",
@@ -21,6 +27,7 @@
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
+    "typescript-eslint": "^8.10.0",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   }
